[package]
name = "tokio-p2p"
version = "0.1.0"
authors = ["kc1212 <kc1212@users.noreply.github.com>"]

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
futures = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
uuid = { version = "0.4", features = ["serde", "v4"] }
getopts = "0.2"
rand = "0.3"